--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/assets/Logotype.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RTeam</title>
+    <link rel="stylesheet" href="/animate.min.css">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="/wow.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            new WOW().init();
+        })
+    </script>
   </body>
 </html>
